--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -66,3 +66,7 @@ onlyBuiltDependencies:
   - sqlite3
   - vue-demi
 
+overrides:
+  "form-data": "^4.0.4"
+  "tar-fs": "^2.1.3"
+  "brace-expansion": "^2.0.2"
